# ChangeLog for sys-apps/baselayout
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/baselayout/ChangeLog,v 1.65 2003/03/09 09:58:24 azarah Exp $

*baselayout-1.8.6.3 (09 March 2003)

  09 March 2003;  Martin Schlemmer <azarah@gentoo.org> baselayout-1.8.6.3.ebuild :
  New beta release; check ChangeLog in usual place for more info.

  20 Feb 2003; Zach Welch <zwelch@gentoo.org> baselayout-1.8.5.8.ebuild :
  Added arm to keywords.

  08 Feb 2003; Guy Martin <gmsoft@gentoo.org> baselayout-1.8.5.8.ebuild :
  Added hppa to keywords.

  22 Jan 2003; Martin Schlemmer <azarah@gentoo.org> baselayout-1.8.5.8.ebuild :
  Mark stable.

*baselayout-1.8.6.2 (07 Jan 2003)

  18 Jan 2003; Jan Seidel <tuxus@gentoo.org> :
  serial console for mips

  15 Jan 2003; Martin Schlemmer <azarah@gentoo.org> baselayout-1.8.6.2.ebuild :

  Bugfixes for /var stuff.

  15 Jan 2003; Martin Schlemmer <azarah@gentoo.org> baselayout-1.8.6.1.ebuild :

  New version with /var on seperate partition fixes ...

  07 Jan 2003; Martin Schlemmer <azarah@gentoo.org> baselayout-1.8.6.0.ebuild :

  Make sure we only update /etc/conf.d/rc if the user do not have the new with
  'svcmount' stuff ...

*baselayout-1.8.6.0 (07 Jan 2003)


  07 Jan 2003; Martin Schlemmer <azarah@gentoo.org> baselayout-1.8.6.0.ebuild :

  New alpha release that do not need tmpfs for caching dependencies.  Also
  RAID changes, etc.  Please make sure to update all ._cfg????_* files, else
  things might break ....  See ChangeLog in /usr/share/doc/$PF for more info.

*baselayout-1.8.5.8 (07 Jan 2003)

  18 Jan 2003; Jan Seidel <tuxus@gentoo.org> :
  serial console for mips

  15 Jan 2003; Jason Wever <weeve@gentoo.org> baselayout-1.8.5.8.ebuild :

  Changed ~sparc keyword to sparc.

  07 Jan 2003; Martin Schlemmer <azarah@gentoo.org> baselayout-1.8.5.8.ebuild :

  Bugfix release; see ChangeLog in /usr/share/doc/$PF.

*baselayout-1.8.5.7 (24 Dec 2002)
