@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/iptables/Attic/iptables-1.2.7a-r3.ebuild,v 1.7 2003/02/22 02:18:35 zwelch Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/iptables/Attic/iptables-1.2.7a-r3.ebuild,v 1.8 2003/03/11 11:30:08 zwelch Exp $
 
 inherit eutils
 
@@ -16,7 +16,7 @@ KEYWORDS="x86 ppc alpha sparc hppa arm"
 LICENSE="GPL-2"
 
 # iptables is dependent on kernel sources.  Strange but true.
-DEPEND="sys-kernel/linux-headers"
+DEPEND="virtual/os-headers"
 
 src_unpack() {
 	unpack ${A}
