@@ -1,6 +1,6 @@
 # ChangeLog for sys-apps/iptables
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/iptables/Attic/ChangeLog,v 1.27 2003/02/22 02:18:35 zwelch Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/iptables/Attic/ChangeLog,v 1.28 2003/03/11 11:30:08 zwelch Exp $
 
   21 Feb 2003; Zach Welch <zwelch@gentoo.org> iptables-1.2.7a-r3.ebuild :
   Added arm keyword 
@@ -9,7 +9,10 @@
   Added patch and keyword for hppa.
 
 *iptables-1.2.7a-r3 (09 Jan 2003)
- 
+
+  11 Mar 2003; Zach Welch <zwelch@gentoo.org> iptables-1.2.7a-r3.ebuild:
+  change sys-kernel/linux-headers to new virtual/os-headers
+
   09 Feb 2003; Seemant Kulleen <seemant@gentoo.org>
   iptables-1.2.7a-r3.ebuild :
 
