@@ -1,8 +1,13 @@
 # ChangeLog for sys-apps/baselayout
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/baselayout/ChangeLog,v 1.65 2003/03/09 09:58:24 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/baselayout/ChangeLog,v 1.66 2003/03/11 11:30:08 zwelch Exp $
 
 *baselayout-1.8.6.3 (09 March 2003)
+
+  11 Mar 2003; Zach Welch <zwelch@gentoo.org> baselayout-1.8.5.5.ebuild,
+  baselayout-1.8.5.8.ebuild, baselayout-1.8.6.2.ebuild,
+  baselayout-1.8.6.3.ebuild:
+  change sys-kernel/linux-headers to new virtual/os-headers
 
   09 March 2003;  Martin Schlemmer <azarah@gentoo.org> baselayout-1.8.6.3.ebuild :
   New beta release; check ChangeLog in usual place for more info.
